fix: minor design fixes

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         </section>
     </template>
 
-    <aside class="sidemenu">
+    <aside class="sidemenu with-top-border">
         <div class="counter"></div>
         <div class="scrollable-wrapper" id="tags-sections-wrapper"></div>
-        <button class="close-sidemenu" id="close-sidemenu">Close</button>
+        <button class="close-sidemenu with-top-border" id="close-sidemenu">Close</button>
     </aside>
 
     <main class="content">
-        <div class="controller output">
+        <div class="controller output with-top-border">
             <div class="textarea-additional">
                 <div class="description with-ellipsis">
                     Unsupported symbols will be omitted, max tag length is 24 letters
@@ -34,7 +34,7 @@
                 <textarea id="output" readonly></textarea>
             </div>
         </div>
-        <div class="controller input">
+        <div class="controller input with-top-border">
             <div class="textarea-additional">
                 <div class="description with-ellipsis">
                     You can enter tags faster by clicking "Tags" button
