fix: styles update

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </section>
     </template>
 
-    <aside class="sidemenu with-top-border" id="tags-menu">
+    <aside class="sidemenu with-border" id="tags-menu">
         <div class="counter"></div>
         <div class="scrollable-wrapper" id="tags-sections-wrapper"></div>
         <button class="close-sidemenu with-top-border" id="close-tags-menu">Close</button>
     </aside>
 
-    <aside class="sidemenu with-top-border" id="settings-menu">
+    <aside class="sidemenu with-border" id="settings-menu">
         <div class="scrollable-wrapper">
             <article class="title">Settings</article>
             <div class="section-wrapper">
@@ -37,8 +37,8 @@
         <button class="close-sidemenu with-top-border" id="close-settings-menu">Save & Close</button>
     </aside>
 
-    <main class="content">
-        <div class="controller output with-top-border">
+    <main class="content with-border">
+        <div class="controller output">
             <div class="textarea-additional">
                 <div class="description with-ellipsis" id="description"></div>
                 <div class="counter"></div>
