fix: optimize styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </template>
 
     <aside class="sidemenu with-border" id="tags-menu">
-        <div class="counter"></div>
+        <div class="control counter"></div>
         <div class="scrollable-wrapper" id="tags-sections-wrapper"></div>
         <button class="close-sidemenu with-top-border" id="close-tags-menu">Close</button>
     </aside>
@@ -41,7 +41,7 @@
         <div class="controller output">
             <div class="textarea-additional">
                 <div class="description with-ellipsis" id="description"></div>
-                <div class="counter"></div>
+                <div class="control counter"></div>
             </div>
             <div class="textarea-wrapper">
                 <textarea id="output" readonly></textarea>
