feat: global restructure

--- a/client/index.html
+++ b/client/index.html
@@ -71,6 +71,6 @@
         </div>
     </main>
 
-    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./modules/index.js"></script>
 </body>
 </html>
