--- a/client/index.html
+++ b/client/index.html
@@ -27,11 +27,11 @@
             <article class="title">Settings</article>
             <div class="section-wrapper">
                 <label for="settings-input-length">Max tag length</label>
-                <input id="settings-input-length" type="number" min="1" step="1" />
+                <input id="settings-input-length" type="number" min="1" step="1" pattern="[0-9]*" inputmode="numeric" />
             </div>
             <div class="section-wrapper">
                 <label for="settings-input-count">Max number of tags</label>
-                <input id="settings-input-count" type="number" min="1" step="1" />
+                <input id="settings-input-count" type="number" min="1" step="1" pattern="[0-9]*" inputmode="numeric" />
             </div>
         </div>
         <button class="close-sidemenu with-top-border" id="close-settings-menu">Save & Close</button>
