--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,7 @@
         <div class="scrollable-wrapper temp-auth">
             <div class="temp-auth-title">Auth</div>
             <button class="temp-auth-button">Sign in with Apple</button>
-            <button class="temp-auth-button">Sign in with Google</button>
+            <button class="temp-auth-button" id="auth_btn">Sign in with Google</button>
             <div class="temp-auth-info">Auth feature is under development</div>
         </div>
         <button class="close-sidemenu with-top-border" id="close-auth-menu">Close</button>
