--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tagger</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
 
     <!--  TEMP  -->
     <style>
@@ -114,6 +114,6 @@
         </div>
     </main>
 
-    <script type="module" src="./modules/index.js"></script>
+    <script type="module" src="./src/modules/index.js"></script>
 </body>
 </html>
